--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
       <li class="breadcrumb-item active">Boards</li>
     </ol>
     <table class="table">
-      <thead class="thead-inverse">
+      <thead class="table-dark">
         <tr>
           <th>Board</th>
           <th>Posts</th>
@@ -28,7 +28,7 @@
         {% for board in boards %}
         <tr>
           <td>
-            {{ board.name }}
+            <a href="{% url 'board_topics' board.pk %}">{{ board.name }}</a>
             <small class="text-muted d-block">{{ board.description }}</small>
           </td>
           <td class="align-middle">0</td>
