--- a/templates/new_topic.html
+++ b/templates/new_topic.html
@@ -12,4 +12,16 @@
 
 
 {% block content %}
+<form method="post">
+  {% csrf_token %}
+  <div class="form-group mb-3">
+    <label for="id_subject">Subject</label>
+    <input type="text" class="form-control" id="id_subject" name="subject">
+  </div>
+  <div class="form-group mb-3">
+    <label for="id_message">Message</label>
+    <textarea class="form-control" id="id_message" name="message" rows="5"></textarea>
+  </div>
+  <button type="submit" class="btn btn-success mb-3">Post</button>
+</form>
 {% endblock %}
