--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/app.css' %}">
+  {% block stylesheet %}{% endblock %}
 </head>
 
 <body>
-
+  {% block body %}
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
@@ -29,6 +30,7 @@
     {% block content %}
     {% endblock %}
   </div>
+  {% endblock body %}
 </body>
 
 </html>
