--- a/templates/base.html
+++ b/templates/base.html
@@ -24,11 +24,24 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        {% if user.is_authenticated %}
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="#">{{ user.username }}</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarNavDropdown">
+              <a class="dropdown-item" href="#">My account</a>
+              <a class="dropdown-item" href="#">Change password</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+            </div>
           </li>
         </ul>
+        {% else %}
+        <form class="form-inline ml-auto">
+          <a href="#" class="btn btn-outline-secondary">Log in</a>
+          <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+        </form>
+        {% endif %}
       </div>
     </div>
   </nav>
@@ -42,6 +55,7 @@
     {% endblock %}
   </div>
   {% endblock body %}
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 
 </html>
